--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:support-v13:23.1.1'
+    //compile 'com.android.support:support-annotations:23.1.1'
     compile 'com.google.code.findbugs:annotations:3.0.0'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
 }
@@ -40,6 +41,7 @@ task findbugs(type: FindBugs) {
     reportLevel = "medium"
     excludeFilter = file("${project.rootDir}/findbugs-exclude.xml")
     classes = files ("${project.buildDir}/intermediates/classes") {
+        //noinspection GroovyAssignabilityCheck
         builtBy 'build'
     }
     println(classes.files)
@@ -48,6 +50,7 @@ task findbugs(type: FindBugs) {
     reports {
         html.enabled = true
         xml.enabled = false
+        //noinspection GroovyAssignabilityCheck
         html {
             destination "$project.buildDir/findbugs/findbugs-output.html"
         }
