--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@
 
 buildscript {
     repositories {
-        jcenter()
+        //jcenter()
         maven { url "https://maven.google.com" }
         maven { url 'http://repo1.maven.org/maven2' }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,9 +17,10 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        //jcenter()
         maven { url "https://maven.google.com" }
         maven { url 'http://repo1.maven.org/maven2' }
+        google()
     }
 }
 
