--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,10 +53,10 @@ task findbugs(type: FindBugs) {
         xml.enabled = false
         //noinspection GroovyAssignabilityCheck
         html {
-            destination "$project.buildDir/findbugs/findbugs-output.html"
+            destination file("$project.buildDir/findbugs/findbugs-output.html")
         }
         xml {
-            destination "$project.buildDir/findbugs/findbugs-output.xml"
+            destination file("$project.buildDir/findbugs/findbugs-output.xml")
         }
     }
 }
