--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,16 +24,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:28.0.0'
-    compile 'com.android.support:recyclerview-v7:28.0.0'
-    compile 'com.android.support:cardview-v7:28.0.0'
-    compile 'com.android.support:support-v13:28.0.0'
-    //compile 'com.android.support:support-annotations:23.1.1'
-    compile 'com.google.code.findbugs:annotations:3.0.0'
-    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
-    compile 'org.jetbrains:annotations-java5:15.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:support-v13:28.0.0'
+    //implementation 'com.android.support:support-annotations:23.1.1'
+    implementation 'com.google.code.findbugs:annotations:3.0.0'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
+    implementation 'org.jetbrains:annotations-java5:15.0'
 }
 
 task findbugs(type: FindBugs) {
